2005-12-06  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* backend/genesys.conf: Enabled Canon LiDE 60 which was disabled
	  for safety reasons. Bugs are fixed now.
	* doc/descriptions/genesys.desc: Changed status of Canon LiDE 50
	  and 60 to "good". Added comment for untested LiDE 40 to report any
	  success/failure.
	* AUTHORS: Marked Fred Odendaal as active maintainer.
	* tools/hotplug/libsane.usermap: Added Epson Perfection 3490.

2005-12-05  Rene Rebe <rene@exactcode.de>

	* backend/avision.c backend/avision.conf doc/sane-avision.man:
	  fixed more typos in comments and debug output, removed obsolete
	  options from the parser, example avision.conf and manual page.
	  Fixed 12 Bit gray and color modes to actually work as well as
	  software CCD line-difference correction. Minimal scan resolutions
	  have been slightly adapted for some ASICs.

2005-12-05  Pierre Willenbrock <pierre@pirsoft.dnsalias.org>

	* backend/genesys.c: removed usage of current_setup in functions
	  where it is not necessarily initialized. Modified shading
	  calibration to not use fixed stripe sizes. Fixed memory
	  corruption while calculating shading data. Fixed read sizes to
	  be multiples of 256. Fixed stagger/line distance
	  correction. Fixed line shrinking to correctly update data
	  buffers. Bumped BUILD number.
	* backend/genesys.c backend/genesys_conv.c: Added gray to lineart
	  conversion.
	* backend/genesys.c backend/genesys_conv_hlp.c: Modified calling
	  parameters to stagger/line distance correction filter to better
	  describe its inner working.
	* backend/genesys_devices.c: Slowed down motor timings for 
	  LiDE 35/40/50/60. Removed untested message for LiDE 35/40/50/60.
	* backend/genesys_gl646.c: Fixed bug for odd pixel count. Added
	  support for gray to lineart conversion.
	* backend/genesys_gl841.c: Fixed words_per_line calculation. Added
	  support for gray to lineart conversion(not used). Fixed problem