@@ -1,3 +1,9 @@
+2005-12-06  Stephane Voltz <stefdev@modulonet.fr>
+
+	* backend/genesys_gl646.c: added AF init in powersave, fixed
+	  long-standing bug related to a data read timeout between 
+	  distinct scanning sessions
+
 2005-12-06  Henning Meier-Geinitz <henning@meier-geinitz.de>
 
 	* backend/genesys.conf: Enabled Canon LiDE 60 which was disabled
